feat: add missing subcategories to exclude from budget category

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -201,7 +201,8 @@
       "healthOthers": "Others : Health",
       "homeAndRealEstateOthers": "Others : Housing, real estate",
       "incomeCatOthers": "Others: Earnings",
-      "activitiesOthers": "Others: Leisure, sports"
+      "activitiesOthers": "Others: Leisure, sports",
+      "excludeFromBudgetCatOthers": "Others : Out of budget"
     },
     "categories": {
       "activities": "Leisure, sports",
