--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -167,14 +167,14 @@
       "dressing": "Habillement",
       "incomeTheme": "Revenu",
       "activities": "Activités",
-      "internalTransfer": "Transfert interne",
+      "internalTransfer": "Virements internes",
       "bankFees": "Frais bancaires",
       "incomeCat": "Revenu",
       "rentalIncome": "Revenus locatifs",
       "tobaccoPress": "Tabac/Presse",
-      "loanCredit": "Crédit de prêt",
+      "loanCredit": "Déblocage prêt, crédits, réserves",
       "activityEquipments": "Équipement sports, loisirs",
-      "professionalExpenses": "Frais professionnels",
+      "professionalExpenses": "Notes de frais (+/-)",
       "wealthTax": "Impôt sur le patrimoine",
       "activityFees": "Cotis. sports, loisirs",
       "allocations": "Aides et allocations",
@@ -191,7 +191,7 @@
       "health": "Santé",
       "pets": "Animaux",
       "excludeFromBudgetCat": "Exclus du budget",
-      "investmentBuySell": "Investissements",
+      "investmentBuySell": "Achats, ventes de titres",
       "pensionPaid": "Pensions",
       "booksMoviesMusic": "Musique, livres, films",
       "restaurantsAndBars": "Restaurants et bars",
@@ -230,7 +230,7 @@
       "charity": "Dons caritatifs",
       "replacementIncome": "Revenus de remplacement",
       "incomeTax": "Impôt sur le revenu",
-      "creditCardPayment": "Paiement par carte de crédit",
+      "creditCardPayment": "Prél. carte débit différé",
       "vehiculeLoan": "Prêt véhicule",
       "tax": "Impôts",
       "excludeFromBudgetTheme": "Exclus du budget",
@@ -242,14 +242,14 @@
       "hobbyAndPassion": "Passion, hobby",
       "snaksAndworkMeals": "Snacks, repas au travail",
       "uncategorized": "Non catégorisé",
-      "friendBorrowing": "Prêt à un ami",
+      "friendBorrowing": "Avances, remboursements",
       "potentialTransfer": "Transfert potentiel",
       "healthExpenses": "Frais, remb santé",
       "additionalIncome": "Revenus complémentaires",
       "journey": "Voyages",
       "services": "Prestations de service",
       "educationAndTraining": "Éducation et formation",
-      "savings": "Des économies",
+      "savings": "Virements d'épargne",
       "realEstateLoan": "Remb. prêt immobilier",
       "homeInsurance": "Assurance logement",
       "dailyLifeOthers": "Autres : Dépenses vie courante",
@@ -257,7 +257,8 @@
       "healthOthers": "Autres : Santé, prévoyance",
       "homeAndRealEstateOthers": "Autres : Logement, immobilier",
       "incomeCatOthers": "Autres : Revenus",
-      "activitiesOthers": "Autres : Sports, loisirs"
+      "activitiesOthers": "Autres : Sports, loisirs",
+      "excludeFromBudgetCatOthers": "Autres : Hors budget"
     }
   },
 
