feat: add missing subcategories to exclude from uncategorized category

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -154,12 +154,12 @@
       "uncategorized": "À catégoriser"
     },
     "subcategories": {
-      "taxi": "Taxi",
+      "taxi": "Taxi et VTC",
       "telecom": "Internet, TV, télécom",
       "giftsOffered": "Cadeaux offerts",
       "eduBooksAndSupplies": "Livres, fournitures (éducation)",
       "homeImprovement": "Travaux, déco, jardin",
-      "parkingAndToll": "Parking et péage",
+      "parkingAndToll": "Parking, péages, PV",
       "goingOutAndTravel": "Sortir et voyager",
       "retirement": "Retraite",
       "vehiculeInsurance": "Assurance véhicule",
@@ -180,12 +180,12 @@
       "allocations": "Aides et allocations",
       "schoolRestaurant": "Restaurant scolaire",
       "schoolInsurance": "Assurance scolaire",
-      "vehiculeRental": "Location de véhicules",
+      "vehiculeRental": "Location véhicule",
       "toysAndGifts": "Jouets et cadeaux",
       "activityLessons": "Cours sports, loisirs",
-      "vehiculePurchase": "Achat de véhicules",
+      "vehiculePurchase": "Achat véhicule",
       "financialAdvisor": "Conseil financier",
-      "goingOutEntertainment": "Sorties/divertissements",
+      "goingOutEntertainment": "Sorties détente",
       "homeAssistance": "Aide-à-domicile",
       "socialTax": "Contributions sociales",
       "health": "Santé",
@@ -194,7 +194,7 @@
       "investmentBuySell": "Achats, ventes de titres",
       "pensionPaid": "Pensions",
       "booksMoviesMusic": "Musique, livres, films",
-      "restaurantsAndBars": "Restaurants et bars",
+      "restaurantsAndBars": "Restaurants, soirées",
       "transportation": "Transport",
       "power": "Electricité, gaz, chauffage",
       "dailyLife": "Vie quotidienne",
@@ -204,7 +204,7 @@
       "water": "Eau",
       "homeHardware": "Meubles, équipement",
       "consumerLoan": "Remb. prêt conso",
-      "publicTransportation": "Transports publics",
+      "publicTransportation": "Transports en commun",
       "donationsReceived": "Cadeaux, dons reçus",
       "post": "Poste, courrier",
       "electronicsAndMultimedia": "Électronique, multimédia",
@@ -212,9 +212,9 @@
       "kids": "Enfants",
       "expenseTheme": "Thème des dépenses",
       "eduLessons": "Cours, soutien scolaire",
-      "atm": "Distributeur de billets",
-      "privateParking": "Parking privé",
-      "vehiculeGas": "Gaz de véhicules",
+      "atm": "Retraits d'espèces",
+      "privateParking": "Garage, parking privé",
+      "vehiculeGas": "Carburant",
       "realEstateTax": "Taxes foncières, d'habitation",
       "homeAndRealEstate": "Maison et immobilier",
       "homeCharges": "Charges logement",
@@ -224,29 +224,29 @@
       "kidsActivities": "Activités pour enfants",
       "legalCounsel": "Conseil juridique",
       "interests": "Intérêts",
-      "vehiculeMaintenance": "Entretien des véhicules",
+      "vehiculeMaintenance": "Entretien, équipements véhicules",
       "kidsAllowance": "Argent de poche",
       "kidsOthers": "Autres : Enfants",
       "charity": "Dons caritatifs",
       "replacementIncome": "Revenus de remplacement",
       "incomeTax": "Impôts sur le revenu",
       "creditCardPayment": "Prél. carte débit différé",
-      "vehiculeLoan": "Prêt véhicule",
+      "vehiculeLoan": "Remb. prêt véhicule",
       "tax": "Impôts",
       "excludeFromBudgetTheme": "Exclus du budget",
       "rent": "Loyer",
-      "goingOutCulture": "Sortir de la culture",
-      "check": "Vérifier",
+      "goingOutCulture": "Sorties culturelles",
+      "check": "Chèques",
       "shoppingECommerce": "Shopping/e-Commerce",
-      "travel": "Voyages",
+      "planeTrainBoat": "Avion/train/bateau...",
       "hobbyAndPassion": "Passion, hobby",
       "snaksAndworkMeals": "Snacks, repas au travail",
       "uncategorized": "Non catégorisé",
       "friendBorrowing": "Avances, remboursements",
-      "potentialTransfer": "Transfert potentiel",
+      "potentialTransfer": "Virements à catégoriser",
       "healthExpenses": "Frais, remb santé",
       "additionalIncome": "Revenus complémentaires",
-      "journey": "Voyages",
+      "travels": "Voyages",
       "services": "Prestations de service",
       "educationAndTraining": "Éducation et formation",
       "savings": "Virements d'épargne",
@@ -260,7 +260,11 @@
       "activitiesOthers": "Autres : Sports, loisirs",
       "excludeFromBudgetCatOthers": "Autres : Hors budget",
       "servicesOthers": "Autres : Services",
-      "taxOthers": "Autres : Impôts"
+      "taxOthers": "Autres : Impôts",
+      "transportationOthers": "Autres : Transports, véhicules",
+      "goingOutAndTravelOthers": "Autres : Sorties, voyages",
+      "cheques": "Chèques",
+      "uncategorizedOthers": "Autres : À catégoriser"
     }
   },
 
