--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,8 +99,8 @@
   "Data": {
     "subcategories": {
       "uncategorized": "Uncategorized",
-      "potentialTransfer": "Potential transfer",
-      "check": "Check",
+      "potentialTransfer": "Potential transfers",
+      "check": "Checks",
       "incomeTheme": "Income",
       "incomeCat": "Income",
       "activityIncome": "Activity income",
@@ -112,7 +112,7 @@
       "rentalIncome": "Rental income",
       "additionalIncome": "Additional income",
       "retirement": "Retirement",
-      "atm": "Cash dispenser",
+      "atm": "Cash withdrawal",
       "expenseTheme": "Expense theme",
       "dailyLife": "Daily life",
       "supermarket": "Supermarket",
@@ -171,8 +171,8 @@
       "restaurantsAndBars": "Restaurants and bars",
       "goingOutEntertainment": "Going out entertainment",
       "goingOutCulture": "Going out culture",
-      "travel": "Travel",
-      "journey": "Journey",
+      "planeTrainBoat": "Plane/train/boat...",
+      "travels": "Travels",
       "educationAndTraining": "Education and training",
       "tuition": "Tuition",
       "eduBooksAndSupplies": "Edu books and supplies",
@@ -204,7 +204,10 @@
       "activitiesOthers": "Others: Leisure, sports",
       "excludeFromBudgetCatOthers": "Others: Out of budget",
       "servicesOthers": "Others: Services",
-      "taxOthers": "Others: Taxes"
+      "taxOthers": "Others: Taxes",
+      "transportationOthers": "Others : Transportation, vehicles",
+      "goingOutAndTravelOthers": "Others: Outings, trips",
+      "uncategorizedOthers": "Others: To be categorized"
     },
     "categories": {
       "activities": "Leisure, sports",
