feat: show health expense bills in transaction actions

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -107,6 +107,7 @@
       "comment": "Ajouter un commentaire",
       "healthExpenseStatus": "Dépense traitée par %{vendors}",
       "healthExpensePending": "Dépense non encore traitée par les assurances santé",
+      "healthExpenseBill": "Relevé %{vendor}",
       "vendorsGlue": "et"
     }
   },
