--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -276,6 +276,7 @@
       "more": "More",
       "healthExpenseStatus": "Expenditure treated by %{vendors}",
       "healthExpensePending": "Expenditure not yet treated by health insurances",
+      "healthExpenseBill": "%{vendor} Statement",
       "vendorsGlue": "and"
     }
   },
