feat: categories synced with what linxo API returns

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -97,12 +97,25 @@
     "account-number": "Account number"
   },
   "Data": {
+    "categories": {
+      "uncategorized": "To be categorized",
+      "incomeCat": "Earnings",
+      "dailyLife": "Everyday life",
+      "transportation": "Transportation, vehicles",
+      "services": "Services",
+      "kids": "Children",
+      "tax": "Taxes",
+      "health": "Health",
+      "activities": "Leisure, sports",
+      "goingOutAndTravel": "Outings, trips",
+      "educationAndTraining": "Education, training",
+      "homeAndRealEstate": "Housing, real estate",
+      "excludeFromBudgetCat": "Out of budget"
+    },
     "subcategories": {
-      "uncategorized": "Uncategorized",
       "potentialTransfer": "Potential transfers",
       "check": "Checks",
-      "incomeTheme": "Income",
-      "incomeCat": "Income",
+      "atm": "Cash withdrawal",
       "activityIncome": "Activity income",
       "replacementIncome": "Replacement income",
       "interests": "Interests",
@@ -112,12 +125,7 @@
       "rentalIncome": "Rental income",
       "additionalIncome": "Additional income",
       "retirement": "Retirement",
-      "atm": "Cash withdrawal",
-      "expenseTheme": "Expense theme",
-      "dailyLife": "Daily life",
       "supermarket": "Supermarket",
-      "tobaccoPress": "Tobacco press",
-      "shoppingECommerce": "Shopping and E-commerce",
       "consumerLoan": "Consumer loan",
       "dressing": "Dressing",
       "pets": "Pets",
@@ -126,7 +134,8 @@
       "charity": "Charity",
       "giftsOffered": "Gifts offered",
       "personalCare": "Personal care",
-      "transportation": "Transportation",
+      "tobaccoPress": "Tobacco press",
+      "shoppingECommerce": "Shopping and E-commerce",
       "vehiculePurchase": "Vehicule purchase",
       "vehiculeLoan": "Vehicule loan",
       "vehiculeRental": "Vehicule rental",
@@ -137,48 +146,39 @@
       "parkingAndToll": "Parking and toll",
       "publicTransportation": "Public transportation",
       "taxi": "Taxi",
-      "services": "Services",
       "post": "Post service",
       "legalCounsel": "Legal counseling",
       "homeAssistance": "Home assistance",
       "bankFees": "Bank fees",
       "financialAdvisor": "Financial advisor",
-      "kids": "Kids",
       "kidsAllowance": "Kids allowance",
-      "kidsOthers": "Others: Kids",
       "schoolRestaurant": "School restaurant",
       "childCare": "Child care",
       "schoolInsurance": "School insurance",
       "toysAndGifts": "Toys and gifts",
       "pensionPaid": "Pension paid",
       "kidsActivities": "Kids activities",
-      "tax": "Tax",
       "incomeTax": "Income tax",
       "socialTax": "Social tax",
       "wealthTax": "Wealth tax",
       "realEstateTax": "Real estate tax",
-      "health": "Health",
       "healthExpenses": "Health expenses",
       "healthInsurance": "Health insurance",
-      "activities": "Activities",
       "activityFees": "Activity fees",
       "activityEquipments": "Activity equipments",
       "activityLessons": "Activity lessons",
-      "electronicsAndMultimedia": "Electronics and multimedia",
-      "booksMoviesMusic": "Books movies music",
+      "electronicsAndMultimedia": "Electronis and multimedia",
+      "booksMoviesMusic": "Books, movies, music",
       "hobbyAndPassion": "Hobby and passion",
-      "goingOutAndTravel": "Going out and travel",
       "restaurantsAndBars": "Restaurants and bars",
       "goingOutEntertainment": "Going out entertainment",
       "goingOutCulture": "Going out culture",
-      "planeTrainBoat": "Plane/train/boat...",
-      "travels": "Travels",
-      "educationAndTraining": "Education and training",
+      "travel": "Travel",
+      "journey": "Plane/train/boat...",
       "tuition": "Tuition",
       "eduBooksAndSupplies": "Edu books and supplies",
       "studentLoan": "Student loan",
       "eduLessons": "Edu lessons",
-      "homeAndRealEstate": "Home and real estate",
       "realEstateLoan": "Real estate loan",
       "rent": "Rent",
       "homeCharges": "Home charges",
@@ -187,8 +187,6 @@
       "homeHardware": "Home hardware",
       "water": "Water",
       "power": "Power",
-      "excludeFromBudgetTheme": "Excluded from budget",
-      "excludeFromBudgetCat": "Excluded from budget",
       "internalTransfer": "Internal transfer",
       "creditCardPayment": "Credit card payment",
       "loanCredit": "Loan credit",
@@ -196,33 +194,19 @@
       "investmentBuySell": "Investment buy sell",
       "friendBorrowing": "Friend borrowing",
       "savings": "Savings",
-      "dailyLifeOthers": "Others: Everyday life",
-      "educationAndTrainingOthers": "Others: Education, training",
+      "kidsOthers": "Others : Children",
+      "dailyLifeOthers": "Others : Everyday life",
+      "educationAndTrainingOthers": "Others : Education, training",
       "healthOthers": "Others : Health",
       "homeAndRealEstateOthers": "Others : Housing, real estate",
-      "incomeCatOthers": "Others: Earnings",
-      "activitiesOthers": "Others: Leisure, sports",
-      "excludeFromBudgetCatOthers": "Others: Out of budget",
-      "servicesOthers": "Others: Services",
-      "taxOthers": "Others: Taxes",
+      "incomeCatOthers": "Others : Earning",
+      "activitiesOthers": "Others : Leisure, sports",
+      "excludeFromBudgetCatOthers": "Others : Out of budget",
+      "servicesOthers": "Others : Services",
+      "taxOthers": "Others : Taxes",
       "transportationOthers": "Others : Transportation, vehicles",
-      "goingOutAndTravelOthers": "Others: Outings, trips",
-      "uncategorizedOthers": "Others: To be categorized"
-    },
-    "categories": {
-      "activities": "Leisure, sports",
-      "dailyLife": "Everyday life",
-      "educationAndTraining": "Education, training",
-      "excludeFromBudgetCat": "Out of budget",
-      "goingOutAndTravel": "Outings, trips",
-      "health": "Health",
-      "homeAndRealEstate": "Housing, real estate",
-      "incomeCat": "Earnings",
-      "kids": "Children",
-      "services": "Services",
-      "tax": "Taxes",
-      "transportation": "Transportation, vehicles",
-      "uncategorized": "To be categorized"
+      "goingOutAndTravelOthers": "Others : Outings, trips",
+      "uncategorizedOthers": "Others : To be categorized"
     }
   },
   "Categories": {
