--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -143,121 +143,105 @@
 
   "Data": {
     "categories": {
-      "activities": "Sports, loisirs",
-      "dailyLife": "Dépense vie courante",
-      "educationAndTraining": "Education, formation",
-      "excludeFromBudgetCat": "Hors budget",
-      "goingOutAndTravel": "Sorties, voyages",
-      "health": "Santé, prévoyance",
-      "homeAndRealEstate": "Logement, immobilier",
+      "uncategorized": "A catégoriser",
       "incomeCat": "Revenus",
-      "kids": "Enfants",
-      "services": "Services",
-      "tax": "Impôts",
+      "dailyLife": "Dépenses vie courante",
       "transportation": "Transports, véhicules",
-      "uncategorized": "À catégoriser"
+      "services": "Services",
+      "kids": "Enfants",
+      "tax": "Impôts",
+      "health": "Santé, prévoyance",
+      "activities": "Sports, loisirs",
+      "goingOutAndTravel": "Sorties, voyages",
+      "educationAndTraining": "Education, formation",
+      "homeAndRealEstate": "Logement, immobilier",
+      "excludeFromBudgetCat": "Hors budget"
     },
     "subcategories": {
-      "taxi": "Taxi et VTC",
-      "telecom": "Internet, TV, télécom",
-      "giftsOffered": "Cadeaux offerts",
-      "eduBooksAndSupplies": "Livres, fournitures (éducation)",
-      "homeImprovement": "Travaux, déco, jardin",
-      "parkingAndToll": "Parking, péages, PV",
-      "goingOutAndTravel": "Sortir et voyager",
-      "retirement": "Retraite",
-      "vehiculeInsurance": "Assurance véhicule",
-      "childCare": "Garde d'enfants",
-      "dressing": "Habillement",
-      "incomeTheme": "Revenu",
-      "activities": "Activités",
-      "internalTransfer": "Virements internes",
-      "bankFees": "Frais bancaires",
-      "incomeCat": "Revenu",
-      "rentalIncome": "Revenus locatifs",
-      "tobaccoPress": "Tabac/Presse",
-      "loanCredit": "Déblocage prêt, crédits, réserves",
-      "activityEquipments": "Équipement sports, loisirs",
-      "professionalExpenses": "Notes de frais (+/-)",
-      "wealthTax": "ISF",
-      "activityFees": "Cotis. sports, loisirs",
-      "allocations": "Aides et allocations",
-      "schoolRestaurant": "Restaurant scolaire",
-      "schoolInsurance": "Assurance scolaire",
-      "vehiculeRental": "Location véhicule",
-      "toysAndGifts": "Jouets et cadeaux",
-      "activityLessons": "Cours sports, loisirs",
-      "vehiculePurchase": "Achat véhicule",
-      "financialAdvisor": "Conseil financier",
-      "goingOutEntertainment": "Sorties détente",
-      "homeAssistance": "Aide-à-domicile",
-      "socialTax": "Contributions sociales",
-      "health": "Santé",
-      "pets": "Animaux",
-      "excludeFromBudgetCat": "Exclus du budget",
-      "investmentBuySell": "Achats, ventes de titres",
-      "pensionPaid": "Pensions",
-      "booksMoviesMusic": "Musique, livres, films",
-      "restaurantsAndBars": "Restaurants, soirées",
-      "transportation": "Transport",
-      "power": "Electricité, gaz, chauffage",
-      "dailyLife": "Vie quotidienne",
-      "dividends": "Dividendes",
-      "supermarket": "Alimentation, supermarché",
-      "tuition": "Inscription, scolarité",
-      "water": "Eau",
-      "homeHardware": "Meubles, équipement",
-      "consumerLoan": "Remb. prêt conso",
-      "publicTransportation": "Transports en commun",
-      "donationsReceived": "Cadeaux, dons reçus",
-      "post": "Poste, courrier",
-      "electronicsAndMultimedia": "Électronique, multimédia",
-      "studentLoan": "Remb. prêt étudiant",
-      "kids": "Enfants",
-      "expenseTheme": "Thème des dépenses",
-      "eduLessons": "Cours, soutien scolaire",
-      "atm": "Retraits d'espèces",
-      "privateParking": "Garage, parking privé",
-      "vehiculeGas": "Carburant",
-      "realEstateTax": "Taxes foncières, d'habitation",
-      "homeAndRealEstate": "Maison et immobilier",
-      "homeCharges": "Charges logement",
-      "personalCare": "Coiffeur, esthétique, cosmétique, soins",
-      "healthInsurance": "Cotis mutuelle, prévoyance",
-      "activityIncome": "Salaire/Revenus d'activité",
-      "kidsActivities": "Activités pour enfants",
-      "legalCounsel": "Conseil juridique",
-      "interests": "Intérêts",
-      "vehiculeMaintenance": "Entretien, équipements véhicules",
-      "kidsAllowance": "Argent de poche",
-      "kidsOthers": "Autres : Enfants",
-      "charity": "Dons caritatifs",
-      "replacementIncome": "Revenus de remplacement",
-      "incomeTax": "Impôts sur le revenu",
-      "creditCardPayment": "Prél. carte débit différé",
-      "vehiculeLoan": "Remb. prêt véhicule",
-      "tax": "Impôts",
-      "excludeFromBudgetTheme": "Exclus du budget",
-      "rent": "Loyer",
-      "goingOutCulture": "Sorties culturelles",
-      "check": "Chèques",
-      "shoppingECommerce": "Shopping/e-Commerce",
-      "planeTrainBoat": "Avion/train/bateau...",
-      "hobbyAndPassion": "Passion, hobby",
-      "snaksAndworkMeals": "Snacks, repas au travail",
-      "uncategorized": "Non catégorisé",
-      "friendBorrowing": "Avances, remboursements",
       "potentialTransfer": "Virements à catégoriser",
-      "healthExpenses": "Frais, remb santé",
+      "check": "Chèques",
+      "atm": "Retraits d'espèces",
+      "activityIncome": "Salaire/Revenus d'activité",
+      "replacementIncome": "Revenus de remplacement",
+      "interests": "Intérêts",
+      "dividends": "Dividendes",
+      "donationsReceived": "Cadeaux, dons reçus",
+      "allocations": "Aides et allocations",
+      "rentalIncome": "Revenus locatifs",
       "additionalIncome": "Revenus complémentaires",
-      "travels": "Voyages",
-      "services": "Prestations de service",
-      "educationAndTraining": "Éducation et formation",
-      "savings": "Virements d'épargne",
+      "retirement": "Retraite",
+      "supermarket": "Alimentation, supermarché",
+      "consumerLoan": "Remb. prêt conso",
+      "dressing": "Habillement",
+      "pets": "Animaux",
+      "telecom": "Internet, TV, télécom",
+      "snaksAndworkMeals": "Snacks, repas au travail",
+      "charity": "Dons caritatifs",
+      "giftsOffered": "Cadeaux offerts",
+      "personalCare": "Coiffeur, esthétique, cosmétique, soins",
+      "tobaccoPress": "Tabac/Presse",
+      "shoppingECommerce": "Shopping/e-Commerce",
+      "vehiculePurchase": "Achat véhicule",
+      "vehiculeLoan": "Remb. prêt véhicule",
+      "vehiculeRental": "Location véhicule",
+      "vehiculeInsurance": "Assurance véhicule",
+      "vehiculeMaintenance": "Entretien, équipements véhicules",
+      "vehiculeGas": "Carburant",
+      "privateParking": "Garage, parking privé",
+      "parkingAndToll": "Parking, péages, PV",
+      "publicTransportation": "Transports en commun",
+      "taxi": "Taxi et VTC",
+      "post": "Poste, courrier",
+      "legalCounsel": "Conseil juridique",
+      "homeAssistance": "Aide-à-domicile",
+      "bankFees": "Frais bancaires",
+      "financialAdvisor": "Conseil financier",
+      "kidsAllowance": "Argent de poche",
+      "schoolRestaurant": "Restauration scolaire",
+      "childCare": "Garde d'enfants",
+      "schoolInsurance": "Assurance scolaire",
+      "toysAndGifts": "Jouets, cadeaux",
+      "pensionPaid": "Pension versée",
+      "kidsActivities": "Activités enfants",
+      "incomeTax": "Impôts sur le revenu",
+      "socialTax": "Contributions sociales",
+      "wealthTax": "ISF",
+      "realEstateTax": "Taxes foncières, d'habitation",
+      "healthExpenses": "Frais, remb santé",
+      "healthInsurance": "Cotis mutuelle, prévoyance",
+      "activityFees": "Cotis. sports, loisirs",
+      "activityEquipments": "Equipement sports, loisirs",
+      "activityLessons": "Cours sports, loisirs",
+      "electronicsAndMultimedia": "Electronique, multimédia",
+      "booksMoviesMusic": "Musique, livres, films",
+      "hobbyAndPassion": "Passion, hobby",
+      "restaurantsAndBars": "Restaurants, soirées",
+      "goingOutEntertainment": "Sorties détente",
+      "goingOutCulture": "Sorties culturelles",
+      "travel": "Voyages",
+      "journey": "Avion/train/bateau...",
+      "tuition": "Inscription, scolarité",
+      "eduBooksAndSupplies": "Livres, fournitures (éducation)",
+      "studentLoan": "Remb. prêt étudiant",
+      "eduLessons": "Cours, soutien scolaire",
       "realEstateLoan": "Remb. prêt immobilier",
+      "rent": "Loyer",
+      "homeCharges": "Charges logement",
       "homeInsurance": "Assurance logement",
+      "homeImprovement": "Travaux, déco, jardin",
+      "homeHardware": "Meubles, équipement",
+      "water": "Eau",
+      "power": "Electricité, gaz, chauffage",
+      "internalTransfer": "Virements internes",
+      "creditCardPayment": "Prél. carte débit différé",
+      "loanCredit": "Déblocage prêt, crédits, réserves",
+      "professionalExpenses": "Notes de frais (+/-)",
+      "investmentBuySell": "Achats, ventes de titres",
+      "friendBorrowing": "Avances, remboursements",
+      "savings": "Virements d'épargne",
+      "kidsOthers": "Autres : Enfants",
       "dailyLifeOthers": "Autres : Dépenses vie courante",
-      "educationAndTrainingOthers": "Autres : Éducation, formation",
+      "educationAndTrainingOthers": "Autres : Education, formation",
       "healthOthers": "Autres : Santé, prévoyance",
       "homeAndRealEstateOthers": "Autres : Logement, immobilier",
       "incomeCatOthers": "Autres : Revenus",
@@ -267,8 +251,7 @@
       "taxOthers": "Autres : Impôts",
       "transportationOthers": "Autres : Transports, véhicules",
       "goingOutAndTravelOthers": "Autres : Sorties, voyages",
-      "cheques": "Chèques",
-      "uncategorizedOthers": "Autres : À catégoriser"
+      "uncategorizedOthers": "Autres : A catégoriser"
     }
   },
 
