fix: missing translation on 'others' subcategories and always show 'others' subcategories last

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -239,19 +239,19 @@
       "investmentBuySell": "Achats, ventes de titres",
       "friendBorrowing": "Avances, remboursements",
       "savings": "Virements d'épargne",
-      "kidsOthers": "Autres : Enfants",
-      "dailyLifeOthers": "Autres : Dépenses vie courante",
-      "educationAndTrainingOthers": "Autres : Education, formation",
-      "healthOthers": "Autres : Santé, prévoyance",
-      "homeAndRealEstateOthers": "Autres : Logement, immobilier",
-      "incomeCatOthers": "Autres : Revenus",
-      "activitiesOthers": "Autres : Sports, loisirs",
-      "excludeFromBudgetCatOthers": "Autres : Hors budget",
-      "servicesOthers": "Autres : Services",
-      "taxOthers": "Autres : Impôts",
-      "transportationOthers": "Autres : Transports, véhicules",
-      "goingOutAndTravelOthers": "Autres : Sorties, voyages",
-      "uncategorizedOthers": "Autres : A catégoriser"
+      "kids": "Autres : Enfants",
+      "dailyLife": "Autres : Dépenses vie courante",
+      "educationAndTraining": "Autres : Education, formation",
+      "health": "Autres : Santé, prévoyance",
+      "homeAndRealEstate": "Autres : Logement, immobilier",
+      "incomeCat": "Autres : Revenus",
+      "activities": "Autres : Sports, loisirs",
+      "excludeFromBudgetCat": "Autres : Hors budget",
+      "services": "Autres : Services",
+      "tax": "Autres : Impôts",
+      "transportation": "Autres : Transports, véhicules",
+      "goingOutAndTravel": "Autres : Sorties, voyages",
+      "uncategorized": "Autres : A catégoriser"
     }
   },
 
