fix: little fix on onboarding item

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -350,7 +350,7 @@
     },
     "connect-bank-account": "Connect your bank accounts",
     "manage-budget": {
-      "description": "Summary of all your accounts in a glance",
+      "description": "Summary of all your accounts at a glance",
       "title": "Control your budget"
     },
     "save-time": {
