feat: Rename Cozy Bank to Cozy Banks

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -345,7 +345,7 @@
 
   "Onboarding": {
     "title": {
-      "desktop": "Se connecter à son espace bancaire",
+      "desktop": "Connecter vos comptes bancaires",
       "mobile": "Cozy Banks"
     },
     "connect-bank-account": "Connecter vos comptes bancaires",
