fix: selected category name has a bold font

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -194,19 +194,19 @@
       "investmentBuySell": "Investment buy sell",
       "friendBorrowing": "Friend borrowing",
       "savings": "Savings",
-      "kids": "Others : Children",
-      "dailyLife": "Others : Everyday life",
-      "educationAndTraining": "Others : Education, training",
-      "health": "Others : Health",
-      "homeAndRealEstate": "Others : Housing, real estate",
-      "incomeCat": "Others : Earning",
-      "activities": "Others : Leisure, sports",
-      "excludeFromBudgetCat": "Others : Out of budget",
-      "services": "Others : Services",
-      "tax": "Others : Taxes",
-      "transportation": "Others : Transportation, vehicles",
-      "goingOutAndTravel": "Others : Outings, trips",
-      "uncategorized": "Others : To be categorized"
+      "kidsOthers": "Others : Children",
+      "dailyLifeOthers": "Others : Everyday life",
+      "educationAndTrainingOthers": "Others : Education, training",
+      "healthOthers": "Others : Health",
+      "homeAndRealEstateOthers": "Others : Housing, real estate",
+      "incomeCatOthers": "Others : Earning",
+      "activitiesOthers": "Others : Leisure, sports",
+      "excludeFromBudgetCatOthers": "Others : Out of budget",
+      "servicesOthers": "Others : Services",
+      "taxOthers": "Others : Taxes",
+      "transportationOthers": "Others : Transportation, vehicles",
+      "goingOutAndTravelOthers": "Others : Outings, trips",
+      "uncategorizedOthers": "Others : To be categorized"
     }
   },
   "Categories": {
