--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -86,6 +86,7 @@
     "edit": "edit",
     "create": "Create a group",
     "label": "Label",
+    "bank": "Bank",
     "accounts": "Accounts",
     "groups": "Groups",
     "delete": "remove",
