✨ feat: replace balance by total for groups

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -95,7 +95,8 @@
     "rename": "Rename",
     "save": "Save",
     "included": "Included",
-    "account-number": "Account number"
+    "account-number": "Account number",
+    "total-balance": "Total"
   },
   "Data": {
     "categories": {
