--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -270,7 +270,8 @@
     "rename": "Renommer",
     "save": "Sauver",
     "included": "Inclus",
-    "account-number": "Numéro du compte"
+    "account-number": "Numéro du compte",
+    "total-balance": "Total"
   },
 
 
